--- a/index.html
+++ b/index.html
@@ -26,9 +26,30 @@
     <div id ="upcastingBlack" >
       <div id ="queen" class ="casting" onclick = "select1(this.id)">&#9813</div>
       <div id ="rook" class ="casting" onclick = "select1(this.id)">&#9814</div>
-      <div id ="bishop" class ="cast  console.log("break");ing" onclick = "select1(this.id)">&#9815</div>
+      <div id ="bishop" class ="casting"onclick = "select1(this.id)">&#9815</div>
       <div id ="horse" class ="casting" onclick = "select1(this.id)">&#9816</div>
     </div>
+  </div>
+  <div class="numIndicater">
+    <div class="width odd">8</div>
+    <div class="width even">7</div>
+    <div class="width odd">6</div>
+    <div class="width even">5</div>
+    <div class="width odd">4</div>
+    <div class="width even">3</div>
+    <div class="width odd">2</div>
+    <div class="width even">1</div>
+  </div>
+
+  <div class="AlpIndicater">
+    <div class="alp even">a</div>
+    <div class="alp odd">b</div>
+    <div class="alp even">c</div>
+    <div class="alp odd">d</div>
+    <div class="alp even">e</div>
+    <div class="alp odd">f</div>
+    <div class="alp even">g</div>
+    <div class="alp odd">h</div>
   </div>
   <script src="script.js"></script>
 
